--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.486.0",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
