--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.4",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.486.0",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-big-calendar": "^1.18.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "svgo": "^3.3.2",
     "web-vitals": "^2.1.4"
